--- a/meeteval/viz/visualize.css
+++ b/meeteval/viz/visualize.css
@@ -21,6 +21,11 @@
 
 .show {display: block;}
 
+.top-row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .info-container {
     display: flex;
     /* border: 1px solid black; */
@@ -28,17 +33,21 @@
     margin: 0px 2px 0px 2px;
 }
 
-.info-tag {
-    margin: 0 3px 0 3px;
+.pill {
+    display: flex;
+    margin: 2px 3px 0 3px;
     background-color: #fff;
-    border-radius: 5px;
+    border-radius: 7px;
     border: 1px solid #000;
     padding: 0 5px 0 5px;
+    white-space: nowrap;
+    align-items: center;
 }
 
 .info-label {
     display: inline-block;
     font-weight: bold;
+    margin-right: 5px;
 }
 
 .info-value {
@@ -46,18 +55,10 @@
     font-weight: normal;
 }
 
-.legend-container {
-    display: flex;
-    margin: 0 3px 0 3px;
-    background-color: #fff;
-    border-radius: 5px;
-    border: 1px solid #000;
-    padding: 0 0px 0 0px;
-}
-
 .legend-element {
     margin: 0 3px 0 3px;
-    padding: 0 0px 0 0
+    padding: 0 0px 0 0;
+    white-space: nowrap;
 }
 
 .legend-color {
@@ -67,5 +68,17 @@
 }
 
 .legend-label {
+    display: inline-block;
     padding-left: 5px;
+}
+
+.pill.warn {
+    background-color: #f3ebc9;
+    border: 1px solid #ffcc00;
+}
+
+i {
+    display: inline-block;
+    font-size: 1.2em;
+    margin-right: 5px;
 }
