Set font to Arial

--- a/meeteval/viz/visualize.css
+++ b/meeteval/viz/visualize.css
@@ -1,3 +1,7 @@
+.meeteval-viz * {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .dropdown {
     position: relative;
     display: inline-block;
