--- a/meeteval/viz/visualize.css
+++ b/meeteval/viz/visualize.css
@@ -59,6 +59,17 @@
     align-items: center;
 }
 
+.selected-segment-details {
+    display: flex;
+    margin: 2px 3px 0 3px;
+    background-color: #fff;
+    border-radius: 7px;
+    border: 1px solid #000;
+    padding: 0 5px 0 5px;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
 .info-label {
     display: inline-block;
     font-weight: bold;
