--- a/meeteval/viz/visualize.css
+++ b/meeteval/viz/visualize.css
@@ -1,4 +1,5 @@
-.meeteval-viz * {
+/* Set the font for everything within the visualization, except for font-awesome icons */
+.meeteval-viz :not(.fas) {
     font-family: Arial, Helvetica, sans-serif;
 }
 
