Rename .minimap -> .plot

--- a/meeteval/viz/visualize.css
+++ b/meeteval/viz/visualize.css
@@ -122,7 +122,7 @@ i {
 }
 
 /* Plot elements */
-.minimap {
+.plot {
     position: relative;
     background-color: white;
     margin-bottom: 1px;
