Make minimaps resizable by dragging the x axis and improve resize and dragging behavior
- dragging now works even when the cursor leaves the element
- resizing keeps the brush position on the axis, not screen position
- minimaps can be resized by dragging their x-axis

--- a/meeteval/viz/visualize.css
+++ b/meeteval/viz/visualize.css
@@ -131,6 +131,16 @@ i {
     border-radius: 5px;
 }
 
+/* Minimaps */
+.minimap-resize-handle {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left:0;
+    height: 5px;
+    cursor: row-resize;
+}
+
 /* Tooltips */
 .tooltip {
     position: relative;
