--- a/meeteval/viz/visualize.css
+++ b/meeteval/viz/visualize.css
@@ -63,8 +63,28 @@
     border-radius: 7px;
     border: 1px solid #000;
     padding: 0 5px 0 5px;
-    flex-wrap: wrap;
+    /*flex-wrap: wrap;*/
     align-items: center;
+    width: 100%;
+    overflow: hidden;
+}
+
+.selected-utterance-expand {
+    position: absolute;
+    right:0;
+    top: 0;
+    background: #fff;
+    border-radius: 0 0 0 5px;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+    cursor: pointer;
+    margin: 0;
+    padding: 0 5px;
+}
+
+.expanded {
+    flex-wrap: wrap;
+    overflow: visible;
 }
 
 .info-label {
