Indicate active minimap resize with blue color

--- a/meeteval/viz/visualize.css
+++ b/meeteval/viz/visualize.css
@@ -164,6 +164,13 @@ i {
     left:0;
     height: 5px;
     cursor: row-resize;
+    opacity: 70%;
+    background-color: transparent;
+    transition: background-color 0.3s;
+}
+
+.minimap-resize-handle.active {
+    background-color: #4f9fee;
 }
 
 /* Tooltips */
