Improve experience on mobile
- Disable zooming/viewport scaling
- Scale visualization to full window size
- Make tooltips scrollable when they are larger than the screen size

--- a/meeteval/viz/visualize.css
+++ b/meeteval/viz/visualize.css
@@ -228,6 +228,9 @@ visible area.
     opacity: 0;
     transition: opacity 0.3s;
     transition-delay: 2s;
+    max-width: 100vw;
+    overflow: scroll;
+    box-sizing: border-box;
 
     /* Width: fit content size. Size is limited by children */
     inline-size: fit-content;
