--- a/meeteval/viz/visualize.css
+++ b/meeteval/viz/visualize.css
@@ -1,12 +1,7 @@
-/* Set the font for everything within the visualization, except for font-awesome icons */
-.meeteval-viz :not(.fas) {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 .icon {
   width: 1em;
   height: 1.125em;
-  vertical-align: -0.125em;
+  /*vertical-align: -0.125em;*/
 }
 
 .meeteval-viz {
@@ -19,6 +14,11 @@
 
 .meeteval-viz table {
     color: black;
+}
+
+code {
+    font-family: "Courier New", Courier, monospace; /* Monospace font */
+    white-space: pre-wrap; /* Preserve white spaces and wrap lines */
 }
 
 .plot-area {
