Fix WER breakdown for ORC and upate alignment info text

--- a/meeteval/viz/visualize.css
+++ b/meeteval/viz/visualize.css
@@ -218,7 +218,7 @@ visible area.
     white-space: pre-wrap;
     background-color: #555;
     color: #fff;
-    text-align: center;
+    text-align: left;
     border-radius: 6px;
     padding: 5px;
     position: absolute;
