Add buttons to jump to the next/prev occurence of self-overlap

--- a/meeteval/viz/visualize.css
+++ b/meeteval/viz/visualize.css
@@ -439,3 +439,11 @@ wer table */
     -webkit-user-select: none;
     touch-action: manipulation;
 }
+
+.clickable {
+    cursor: pointer;
+    text-decoration: underline;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
