--- a/meeteval/viz/visualize.css
+++ b/meeteval/viz/visualize.css
@@ -2,6 +2,7 @@
   width: 1em;
   height: 1.125em;
   /*vertical-align: -0.125em;*/
+    vertical-align: text-bottom;
 }
 
 .meeteval-viz {
@@ -85,7 +86,8 @@ code {
     display: flex;
     align-items: center;
     width: 100%;
-    overflow: hidden
+    overflow: hidden;
+    min-height: 2.5ex;
 }
 
 .selected-utterance-expand {
@@ -120,7 +122,7 @@ code {
 }
 
 audio.info-value {
-    height: 1.5em;
+    height: 2.2ex;
 }
 
 .legend-element {
@@ -253,7 +255,7 @@ visible area.
     opacity: 0;
     transition: opacity 0.3s;
     transition-delay: 2s;
-    max-width: 100vw;
+    max-width: 50vw;    /* Limit width to 50% of the viewport so that the tooltip can never cover the full screen area*/
     overflow: auto;
     box-sizing: border-box;
 
